--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,11 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test --if-defined
+    
+  deploy:
+      runs-on: ubuntu-latest
+      needs: 
+       build 
+      steps:
+       - run: npm deploy
+      
