--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        os: [ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v3
@@ -29,10 +29,8 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     
-  deploy:
+  help:
       runs-on: ubuntu-latest
-      needs: 
-       build 
       steps:
        - run: npm help
       
