--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,7 @@ jobs:
   help:
       runs-on: ubuntu-latest
       steps:
+      - uses: actions/checkout@v3
       - name: Use OS ${{ matrix.os }}
         with:
          node-version: ${{ matrix.node-version }}
