--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     - run: npm run build --if-present
     
   help:
-      runs-on: ubuntu-latest
+      runs-on: ${{ matrix.os }}
       steps:
       - uses: actions/checkout@v3
       - name: Use OS ${{ matrix.os }}
