--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,6 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-        os: [ubuntu-latest, windows-latest]
 
     steps:
     - uses: actions/checkout@v3
@@ -30,11 +29,10 @@ jobs:
     - run: npm run build --if-present
     
   help:
+      strategy:
+       matrix:
+        os: [ubuntu-latest, windows-latest]
       runs-on: ${{ matrix.os }}
       steps:
-      - uses: actions/checkout@v3
-      - name: Use OS ${{ matrix.os }}
-        with:
-         node-version: ${{ matrix.node-version }}
       - run: npm help
       
